--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
           "clsx": "*",
           "cmdk": "^1.1.1",
           "embla-carousel-react": "^8.6.0",
+          "firebase": "^10.12.2",
           "fs": "*",
           "idb": "*",
           "input-otp": "^1.4.2",
